# slicer-spine-mesh

./: CMakeLists.txt  README.md
SpineMeshGenerator/: CMakeLists.txt  SpineMeshGenerator.py  generate_mesh.py  setup_helper.py
SpineMeshGenerator/Resources/UI/: SpineMeshGenerator.ui
